# Habbo-Emulator

./: CMakeLists.txt  QuadralEmu.vcxproj  QuadralEmu.vcxproj.filters  README.md  main.cpp
Common/: SharedDefines.h  Timer.h
src/: CMakeLists.txt  main.cpp
src/Common/: SharedDefines.h  Timer.h
src/Common/Logging/: Logger.h
src/Engine/: CMakeLists.txt
src/Engine/Config/: Config.cpp  Config.hpp
src/Engine/Core/: Core.hpp
src/Engine/Database/: BindData.hpp  CallBackOperator.cpp  CallBackOperator.hpp  Database.cpp  Database.hpp  DatabaseTypes.hpp  DatabaseWorker.cpp  DatabaseWorker.hpp  MYSQLPreparedStatement.cpp  MYSQLPreparedStatement.hpp  Operator.hpp  OperatorProcessor.cpp  OperatorProcessor.hpp  PrepareStatementOperator.cpp  PrepareStatementOperator.hpp  PreparedResultSet.cpp  PreparedResultSet.hpp  PreparedStatement.cpp  PreparedStatement.hpp  PreparedStatements.cpp  PreparedStatements.hpp  ProducerQueue.hpp  ResultSet.hpp  SQLCommon.hpp
src/Engine/Diagnostic/: DiaIntervalTimer.hpp  DiaServerWatch.cpp  DiaServerWatch.hpp  DiaStopWatch.cpp  DiaStopWatch.hpp
src/Engine/Documentation/: Documentation.txt
src/Engine/Logger/: Base.cpp  Base.hpp  LogAppender.hpp  LogDefines.hpp  LogFileAppender.cpp  LogFileAppender.hpp
src/Engine/Network/: Listener.hpp  NetworkThread.hpp  PacketBuffer.cpp  PacketBuffer.hpp  Socket.cpp  Socket.hpp
src/Engine/PCH/: Precompiled.cpp  Precompiled.hpp
src/Engine/Singleton/: Singleton.cpp  Singleton.hpp
src/Engine/Threading/: ThrLambdaTask.cpp  ThrLambdaTask.hpp  ThrOptimizeTask.cpp  ThrOptimizeTask.hpp  ThrTask.cpp  ThrTask.hpp  ThrTaskManager.cpp  ThrTaskManager.hpp  ThrTaskWorker.cpp  ThrTaskWorker.hpp  ThrThisThread.cpp  ThrThisThread.hpp  ThrThread.cpp  ThrThread.hpp
src/Engine/Utility/: UtiEndian.hpp  UtiLockable.cpp  UtiLockable.hpp  UtiLockedQueue.hpp  UtiObjectGuard.hpp  UtiStreamHelpers.cpp  UtiStreamHelpers.hpp  UtiString.cpp  UtiString.hpp  UtiSystem.hpp  UtilMaths.hpp  UtilRandom.cpp  UtilRandom.hpp
src/Entity/Item/: Item.cpp  Item.h  PublicItem.cpp  PublicItem.h
src/Entity/Player/: Player.cpp  Player.h
src/Game/: CMakeLists.txt  game.conf.dist.in  main.cpp
src/Game/Server/: Socket.cpp  Socket.hpp
src/Manager/: CatalogueManager.cpp  CatalogueManager.h  RoomManager.cpp  ScheduleWalker.cpp  ScheduleWalker.h
src/Network/: DatabaseManager.h
src/Network/lib/: MYSQLConnection.h
src/PathFinding/: PathFinding.cpp  PathFinding.h
src/Quad/: QuadEngine.cpp  QuadEngine.h
src/Room/: Room.cpp  Room.h
src/Server/: CMakeLists.txt  WorldSession.cpp  WorldSession.h  main.cpp  server.conf.dist.in
src/Server/Catalogue/: CatalogueItem.cpp  CatalogueItem.h  CataloguePage.h
src/Server/Entity/Habbo/: Habbo.cpp  Habbo.h
src/Server/Entity/Habbo/Badge/: Badge.cpp  Badge.h
src/Server/Entity/Habbo/Club/: Club.cpp  HabboClub.cpp  HabboClub.h
src/Server/Entity/Habbo/FavouriteRooms/: FavouriteRoom.cpp  FavouriteRoom.h
src/Server/Entity/Habbo/Fuse/: FuseRights.cpp  FuseRights.h
src/Server/Entity/Habbo/Messenger/: Messenger.cpp  Messenger.h
src/Server/Entity/Item/: Item.cpp  Item.h  ItemDefinition.cpp  ItemDefinition.h  ItemManager.cpp  ItemManager.h
src/Server/Entity/Player/: Player.cpp  Player.h
src/Server/Entity/Player/FavouriteRooms/: FavouriteRoom.cpp  FavouriteRoom.h
src/Server/Entity/Player/Messenger/: Messenger.cpp  Messenger.h
src/Server/Handlers/: AuthenticationHandler.cpp  ItemHandler.cpp  PlayerHandler.cpp  RoomHandler.cpp
src/Server/Managers/: CatalogueManager.cpp  CatalogueManager.h  Hotel.cpp  Hotel.h  ItemManager.cpp  ItemManager.h  PathFinderManager.cpp  PathFinderManager.h  PoolManager.cpp  PoolManager.h  RoomManager.cpp  RoomManager.h  TriggerEventManager.cpp  TriggerEventManager.h
src/Server/Opcode/: Opcodes.cpp  Opcodes.h  PacketStructures.h
src/Server/Packet/: Opcodes.cpp  Opcodes.h  PacketBuffer.h  WorldPacket.h
src/Server/PathFinder/: PathFinder.cpp  PathFinder.h  TileInstance.cpp  TileInstance.h  WayPoints.cpp  WayPoints.h
src/Server/Protocol/: Listener.h  Socket.cpp  Socket.h
src/Server/Room/: Room.cpp  Room.h  RoomCategory.cpp  RoomCategory.h  RoomHabboInfo.cpp  RoomHabboInfo.h  RoomManager.cpp  RoomManager.h  RoomModel.cpp  RoomModel.h  RoomWalkWay.h
src/Server/Socket/: HabboSocket.cpp  HabboSocket.h  PlayerSocket.cpp  PlayerSocket.h
src/Server/Socket/Handlers/: AuthenticationHandler.cpp  MessengerHandler.cpp  NavigateHandler.cpp  PlayerHandler.cpp  RoomHandler.cpp
src/Server/Socket/Opcode/: Opcodes.cpp  Opcodes.h
src/Server/Thread/: ThreadPool.cpp  ThreadPool.h
src/Server/Trigger/: BaseTriggerEvent.h
src/Server/Trigger/Events/: TriggerEventDefault.h  TriggerEventEnterPool.h  TriggerEventExitPool.h  TriggerEventPoolBooth.h  TriggerEventSit.h
src/Server/World/: World.cpp  World.h
src/Shared/: CMakeLists.txt
src/Shared/Common/: Maths.cpp  Maths.h  SHA1.cpp  SHA1.h  SharedDefines.cpp  SharedDefines.h  Timer.cpp  Timer.h
src/Shared/Config/: Config.cpp  Config.h
src/Shared/Database/: BindData.h  CallBackOperator.cpp  CallBackOperator.h  ConnectionPool.h  Database.cpp  Database.h  DatabaseTypes.h  DatabaseWorker.cpp  DatabaseWorker.h  Field_Types.h  Fields.h  MYSQLPreparedStatement.cpp  MYSQLPreparedStatement.h  MySQLConnection.h  Operator.h  OperatorProcessor.cpp  OperatorProcessor.h  PrepareStatementOperator.cpp  PrepareStatementOperator.h  PreparedResultSet.cpp  PreparedResultSet.h  PreparedStatement.cpp  PreparedStatement.h  PreparedStatements.cpp  PreparedStatements.h  ProducerQueue.h  QueryDatabase.cpp  QueryDatabase.h  Result.h  ResultSet.h  SQLCommon.h
src/Shared/Network/: ClientPacket.h  Listener.cpp  Listener.h  NetworkThread.h  Packet.h  PacketBuffer.cpp  PacketBuffer.h  ServerPacket.h  Socket.cpp  Socket.h  StringBuffer.h
src/Shared/Platform/: CompilerDefs.h  ProcessPriority.cpp  ProcessPriority.h
src/Shared/Platform/Thread/: FunctionCallBack.cpp  FunctionCallBack.h  LockedDeque.h  ThreadPool.cpp  ThreadPool.h  ThreadWorker.h
src/Shared/plog/: Record.h
src/Shared/plog/Formatters/: TxtFormatter.h
src/World/: World.cpp  World.h
(+96 files in other folders)
